{
  "version": 4,
  "terraform_version": "1.16.1",
  "serial": 400,
  "lineage": "155a8073-ccbb-7584-81c9-bd0f0d0f9ab1",
  "resources": [
    {
      "module": "module.eks.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:731872836472:security-group/sg-03c70ee54a11cd584",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-03c70ee54a11cd584",
            "ingress": [],
            "name": "dev-cluster-cluster-2026091217095556670000000b",
            "name_prefix": "dev-cluster-cluster-",
            "owner_id": "731872836472",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-cluster-cluster"
            },
            "tags_all": {
              "Name": "dev-cluster-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-02bb181331d696bb4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.aws_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:731872836472:security-group/sg-098453e395e60577b",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-098453e395e60577b",
            "ingress": [],
            "name": "dev-cluster-node-2026091217095551470000000a",
            "name_prefix": "dev-cluster-node-",
            "owner_id": "731872836472",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-cluster-node",
              "kubernetes.io/cluster/dev-cluster": "owned"
            },
            "tags_all": {
              "Name": "dev-cluster-node",
              "kubernetes.io/cluster/dev-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-02bb181331d696bb4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.aws_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3823366597",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03c70ee54a11cd584",
            "security_group_rule_id": "sgr-0fb4d222aad0a944d",
            "self": false,
            "source_security_group_id": "sg-098453e395e60577b",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.aws_eks.aws_security_group.cluster",
            "module.eks.module.aws_eks.aws_security_group.node",
            "module.vpc.module.aws_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1998178886",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-098453e395e60577b",
            "security_group_rule_id": "sgr-0cf9e4c770ee6c123",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.aws_eks.aws_security_group.cluster",
            "module.eks.module.aws_eks.aws_security_group.node",
            "module.vpc.module.aws_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1619250885",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-098453e395e60577b",
            "security_group_rule_id": "sgr-0c48f3b295cb61492",
            "self": false,
            "source_security_group_id": "sg-03c70ee54a11cd584",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.aws_eks.aws_security_group.cluster",
            "module.eks.module.aws_eks.aws_security_group.node",
            "module.vpc.module.aws_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-2352802976",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-098453e395e60577b",
            "security_group_rule_id": "sgr-012002f35a7b6ea6b",
            "self": false,
            "source_security_group_id": "sg-03c70ee54a11cd584",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.aws_eks.aws_security_group.cluster",
            "module.eks.module.aws_eks.aws_security_group.node",
            "module.vpc.module.aws_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-1165921078",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-098453e395e60577b",
            "security_group_rule_id": "sgr-090550f3d7763c753",
            "self": false,
            "source_security_group_id": "sg-03c70ee54a11cd584",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.aws_eks.aws_security_group.cluster",
            "module.eks.module.aws_eks.aws_security_group.node",
            "module.vpc.module.aws_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1445115671",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-098453e395e60577b",
            "security_group_rule_id": "sgr-068275b86893c652e",
            "self": false,
            "source_security_group_id": "sg-03c70ee54a11cd584",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.aws_eks.aws_security_group.cluster",
            "module.eks.module.aws_eks.aws_security_group.node",
            "module.vpc.module.aws_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-847480028",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-098453e395e60577b",
            "security_group_rule_id": "sgr-007f5ecec545013a5",
            "self": false,
            "source_security_group_id": "sg-03c70ee54a11cd584",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.aws_eks.aws_security_group.cluster",
            "module.eks.module.aws_eks.aws_security_group.node",
            "module.vpc.module.aws_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-4205840791",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-098453e395e60577b",
            "security_group_rule_id": "sgr-0cf4840db68acc2a6",
            "self": false,
            "source_security_group_id": "sg-03c70ee54a11cd584",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.aws_eks.aws_security_group.cluster",
            "module.eks.module.aws_eks.aws_security_group.node",
            "module.vpc.module.aws_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-1766286804",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-098453e395e60577b",
            "security_group_rule_id": "sgr-0618c7638351cce7b",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.aws_eks.aws_security_group.cluster",
            "module.eks.module.aws_eks.aws_security_group.node",
            "module.vpc.module.aws_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-4183562132",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-098453e395e60577b",
            "security_group_rule_id": "sgr-0feb51f17e825faea",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.aws_eks.aws_security_group.cluster",
            "module.eks.module.aws_eks.aws_security_group.node",
            "module.vpc.module.aws_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-1560523899",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-098453e395e60577b",
            "security_group_rule_id": "sgr-023876b94a424b1e4",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.module.aws_eks.aws_security_group.cluster",
            "module.eks.module.aws_eks.aws_security_group.node",
            "module.vpc.module.aws_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.aws_vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:731872836472:network-acl/acl-00b44214206ebf899",
            "default_network_acl_id": "acl-00b44214206ebf899",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-00b44214206ebf899",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "731872836472",
            "subnet_ids": [
              "subnet-01839c7ae76167155",
              "subnet-08741d5479403fa22",
              "subnet-0c6b2616d123ba0ff"
            ],
            "tags": {
              "Name": "dev-vpc-default"
            },
            "tags_all": {
              "Name": "dev-vpc-default"
            },
            "vpc_id": "vpc-02bb181331d696bb4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.aws_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.aws_vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:731872836472:route-table/rtb-06ec702fa55bb0841",
            "default_route_table_id": "rtb-06ec702fa55bb0841",
            "id": "rtb-06ec702fa55bb0841",
            "owner_id": "731872836472",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "dev-vpc-default"
            },
            "tags_all": {
              "Name": "dev-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-02bb181331d696bb4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.aws_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.aws_vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:731872836472:security-group/sg-0d8d0080809887965",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0d8d0080809887965",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "731872836472",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-vpc-default"
            },
            "tags_all": {
              "Name": "dev-vpc-default"
            },
            "vpc_id": "vpc-02bb181331d696bb4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.aws_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.aws_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cee8e8771a2febe9",
            "arn": "arn:aws:ec2:eu-central-1:731872836472:elastic-ip/eipalloc-0cee8e8771a2febe9",
            "domain": "vpc",
            "id": "eipalloc-0cee8e8771a2febe9",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-63-188-117-86.eu-central-1.compute.amazonaws.com",
            "public_ip": "63.188.117.86",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-vpc-eu-central-1a"
            },
            "tags_all": {
              "Name": "dev-vpc-eu-central-1a"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.aws_vpc.aws_internet_gateway.this",
            "module.vpc.module.aws_vpc.aws_vpc.this",
            "module.vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.aws_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:731872836472:internet-gateway/igw-04dcdc54deeef7a4d",
            "id": "igw-04dcdc54deeef7a4d",
            "owner_id": "731872836472",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Name": "dev-vpc"
            },
            "vpc_id": "vpc-02bb181331d696bb4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.aws_vpc.aws_vpc.this",
            "module.vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.aws_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cee8e8771a2febe9",
            "association_id": "eipassoc-08e7f4afadb696750",
            "connectivity_type": "public",
            "id": "nat-0f6f95c3f222b2d06",
            "network_interface_id": "eni-02aec7a66ad5637ca",
            "private_ip": "10.0.101.168",
            "public_ip": "63.188.117.86",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01839c7ae76167155",
            "tags": {
              "Name": "dev-vpc-eu-central-1a"
            },
            "tags_all": {
              "Name": "dev-vpc-eu-central-1a"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.aws_vpc.aws_eip.nat",
            "module.vpc.module.aws_vpc.aws_internet_gateway.this",
            "module.vpc.module.aws_vpc.aws_subnet.public",
            "module.vpc.module.aws_vpc.aws_vpc.this",
            "module.vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.aws_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f0ae0ff405f874e51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f6f95c3f222b2d06",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f0ae0ff405f874e5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.aws_vpc.aws_eip.nat",
            "module.vpc.module.aws_vpc.aws_internet_gateway.this",
            "module.vpc.module.aws_vpc.aws_nat_gateway.this",
            "module.vpc.module.aws_vpc.aws_route_table.private",
            "module.vpc.module.aws_vpc.aws_subnet.public",
            "module.vpc.module.aws_vpc.aws_vpc.this",
            "module.vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.aws_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04dcdc54deeef7a4d",
            "id": "r-rtb-0ee74c3057d80d8a51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ee74c3057d80d8a5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.aws_vpc.aws_internet_gateway.this",
            "module.vpc.module.aws_vpc.aws_route_table.public",
            "module.vpc.module.aws_vpc.aws_vpc.this",
            "module.vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:731872836472:route-table/rtb-0f0ae0ff405f874e5",
            "id": "rtb-0f0ae0ff405f874e5",
            "owner_id": "731872836472",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev-vpc-private"
            },
            "tags_all": {
              "Name": "dev-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-02bb181331d696bb4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.aws_vpc.aws_vpc.this",
            "module.vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:731872836472:route-table/rtb-0ee74c3057d80d8a5",
            "id": "rtb-0ee74c3057d80d8a5",
            "owner_id": "731872836472",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev-vpc-public"
            },
            "tags_all": {
              "Name": "dev-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-02bb181331d696bb4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.aws_vpc.aws_vpc.this",
            "module.vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3e082a68349a7aa",
            "route_table_id": "rtb-0f0ae0ff405f874e5",
            "subnet_id": "subnet-05e24d8e976b6cb83"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.aws_vpc.aws_route_table.private",
            "module.vpc.module.aws_vpc.aws_subnet.private",
            "module.vpc.module.aws_vpc.aws_vpc.this",
            "module.vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5e863947e821280",
            "route_table_id": "rtb-0f0ae0ff405f874e5",
            "subnet_id": "subnet-07a891b44ea75b7b7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.aws_vpc.aws_route_table.private",
            "module.vpc.module.aws_vpc.aws_subnet.private",
            "module.vpc.module.aws_vpc.aws_vpc.this",
            "module.vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09255f773fcde5cdd",
            "route_table_id": "rtb-0f0ae0ff405f874e5",
            "subnet_id": "subnet-08741d5479403fa22"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.aws_vpc.aws_route_table.private",
            "module.vpc.module.aws_vpc.aws_subnet.private",
            "module.vpc.module.aws_vpc.aws_vpc.this",
            "module.vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e68e1ef051264af",
            "route_table_id": "rtb-0ee74c3057d80d8a5",
            "subnet_id": "subnet-01839c7ae76167155"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.aws_vpc.aws_route_table.public",
            "module.vpc.module.aws_vpc.aws_subnet.public",
            "module.vpc.module.aws_vpc.aws_vpc.this",
            "module.vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e40cac7f0a5040a5",
            "route_table_id": "rtb-0ee74c3057d80d8a5",
            "subnet_id": "subnet-019c2dd6872482c0e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.aws_vpc.aws_route_table.public",
            "module.vpc.module.aws_vpc.aws_subnet.public",
            "module.vpc.module.aws_vpc.aws_vpc.this",
            "module.vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d8ca5afaa4703b7",
            "route_table_id": "rtb-0ee74c3057d80d8a5",
            "subnet_id": "subnet-0c6b2616d123ba0ff"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.aws_vpc.aws_route_table.public",
            "module.vpc.module.aws_vpc.aws_subnet.public",
            "module.vpc.module.aws_vpc.aws_vpc.this",
            "module.vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:731872836472:subnet/subnet-05e24d8e976b6cb83",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e24d8e976b6cb83",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "731872836472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-vpc-private-eu-central-1a"
            },
            "tags_all": {
              "Name": "dev-vpc-private-eu-central-1a"
            },
            "vpc_id": "vpc-02bb181331d696bb4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.aws_vpc.aws_vpc.this",
            "module.vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:731872836472:subnet/subnet-07a891b44ea75b7b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a891b44ea75b7b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "731872836472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-vpc-private-eu-central-1b"
            },
            "tags_all": {
              "Name": "dev-vpc-private-eu-central-1b"
            },
            "vpc_id": "vpc-02bb181331d696bb4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.aws_vpc.aws_vpc.this",
            "module.vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:731872836472:subnet/subnet-08741d5479403fa22",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08741d5479403fa22",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "731872836472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-vpc-private-eu-central-1c"
            },
            "tags_all": {
              "Name": "dev-vpc-private-eu-central-1c"
            },
            "vpc_id": "vpc-02bb181331d696bb4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.aws_vpc.aws_vpc.this",
            "module.vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:731872836472:subnet/subnet-01839c7ae76167155",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01839c7ae76167155",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "731872836472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-vpc-public-eu-central-1a"
            },
            "tags_all": {
              "Name": "dev-vpc-public-eu-central-1a"
            },
            "vpc_id": "vpc-02bb181331d696bb4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.aws_vpc.aws_vpc.this",
            "module.vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:731872836472:subnet/subnet-019c2dd6872482c0e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-019c2dd6872482c0e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "731872836472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-vpc-public-eu-central-1b"
            },
            "tags_all": {
              "Name": "dev-vpc-public-eu-central-1b"
            },
            "vpc_id": "vpc-02bb181331d696bb4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.aws_vpc.aws_vpc.this",
            "module.vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:731872836472:subnet/subnet-0c6b2616d123ba0ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6b2616d123ba0ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "731872836472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-vpc-public-eu-central-1c"
            },
            "tags_all": {
              "Name": "dev-vpc-public-eu-central-1c"
            },
            "vpc_id": "vpc-02bb181331d696bb4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.aws_vpc.aws_vpc.this",
            "module.vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.aws_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:731872836472:vpc/vpc-02bb181331d696bb4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00b44214206ebf899",
            "default_route_table_id": "rtb-06ec702fa55bb0841",
            "default_security_group_id": "sg-0d8d0080809887965",
            "dhcp_options_id": "dopt-0edc4ad56ac7a15fc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02bb181331d696bb4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06ec702fa55bb0841",
            "owner_id": "731872836472",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Name": "dev-vpc"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}